// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Cleanups > non-TypeErrors > options 1`] = `
"[
  {
    "cleanups": {
      "suppressTypeErrors": true
    },
    "files": {
      "above": "",
      "below": "",
      "renameExtensions": false
    },
    "filters": [],
    "fixes": {
      "importExtensions": false,
      "incompleteTypes": false,
      "missingProperties": false,
      "noImplicitAny": false,
      "noImplicitThis": false,
      "noInferableTypes": false,
      "strictNonNullAssertions": false
    },
    "hints": {
      "react": {
        "propTypes": "whenRequired",
        "propTypesOptionality": "asWritten"
      }
    },
    "include": [
      "<rootDir>/actual.ts"
    ],
    "mutators": [
      [
        "fixImportExtensions",
        null
      ],
      [
        "fixIncompleteTypes",
        null
      ],
      [
        "fixMissingProperties",
        null
      ],
      [
        "fixNoImplicitAny",
        null
      ],
      [
        "fixNoImplicitThis",
        null
      ],
      [
        "fixNoInferableTypes",
        null
      ],
      [
        "fixStrictNonNullAssertions",
        null
      ]
    ],
    "output": {},
    "package": {
      "directory": "<rootDir>",
      "file": "<rootDir>/package.json"
    },
    "parsedTsConfig": {
      "options": {
        "esModuleInterop": true,
        "strictNullChecks": true,
        "resolveJsonModule": true,
        "configFilePath": "<rootDir>/tsconfig.json",
        "noEmit": true,
        "noImplicitAny": false,
        "noImplicitThis": false
      },
      "fileNames": [
        "<rootDir>/actual.ts"
      ],
      "typeAcquisition": {
        "enable": false,
        "include": [],
        "exclude": []
      },
      "raw": {
        "compilerOptions": {
          "esModuleInterop": true,
          "strictNullChecks": true,
          "resolveJsonModule": true
        },
        "files": [
          "actual.ts"
        ]
      },
      "errors": [],
      "wildcardDirectories": {},
      "compileOnSave": false
    },
    "postProcess": {
      "shell": []
    },
    "projectPath": "<rootDir>/tsconfig.json",
    "types": {
      "strictNullChecks": true
    }
  }
]"
`;

exports[`Cleanups > non-TypeErrors > output 1`] = `
"[log] Preparing language services to visit files...
[log] Prepared language services for 1 files...
[stdout] Starting the core mutation engine. This terminal will log whenever a "wave" of mutations are written to files.
[stdout] Core mutations will complete when two waves pass with no mutations.
[stdout] The following fixes will be applied:
[stdout] Starting wave 1...
[stdout] Completed wave 1. Wrote mutations to 0 files.
[stdout] Done.

[stdout] Applying post-fix cleanups...
[stdout] Done.
"
`;

exports[`Cleanups > suppressTypeErrors > options 1`] = `
"[
  {
    "cleanups": {
      "suppressTypeErrors": true
    },
    "files": {
      "above": "",
      "below": "",
      "renameExtensions": false
    },
    "filters": [],
    "fixes": {
      "importExtensions": false,
      "incompleteTypes": false,
      "missingProperties": false,
      "noImplicitAny": false,
      "noImplicitThis": false,
      "noInferableTypes": false,
      "strictNonNullAssertions": false
    },
    "hints": {
      "react": {
        "propTypes": "whenRequired",
        "propTypesOptionality": "asWritten"
      }
    },
    "include": [
      "<rootDir>/actual.ts"
    ],
    "mutators": [
      [
        "fixImportExtensions",
        null
      ],
      [
        "fixIncompleteTypes",
        null
      ],
      [
        "fixMissingProperties",
        null
      ],
      [
        "fixNoImplicitAny",
        null
      ],
      [
        "fixNoImplicitThis",
        null
      ],
      [
        "fixNoInferableTypes",
        null
      ],
      [
        "fixStrictNonNullAssertions",
        null
      ]
    ],
    "output": {},
    "package": {
      "directory": "<rootDir>",
      "file": "<rootDir>/package.json"
    },
    "parsedTsConfig": {
      "options": {
        "strictNullChecks": true,
        "configFilePath": "<rootDir>/tsconfig.json",
        "noEmit": true,
        "noImplicitAny": false,
        "noImplicitThis": false
      },
      "fileNames": [
        "<rootDir>/actual.ts"
      ],
      "typeAcquisition": {
        "enable": false,
        "include": [],
        "exclude": []
      },
      "raw": {
        "compilerOptions": {
          "strictNullChecks": true
        },
        "files": [
          "actual.ts"
        ]
      },
      "errors": [],
      "wildcardDirectories": {},
      "compileOnSave": false
    },
    "postProcess": {
      "shell": []
    },
    "projectPath": "<rootDir>/tsconfig.json",
    "types": {
      "strictNullChecks": true
    }
  }
]"
`;

exports[`Cleanups > suppressTypeErrors > output 1`] = `
"[log] Preparing language services to visit files...
[log] Prepared language services for 1 files...
[stdout] Starting the core mutation engine. This terminal will log whenever a "wave" of mutations are written to files.
[stdout] Core mutations will complete when two waves pass with no mutations.
[stdout] The following fixes will be applied:
[stdout] Starting wave 1...
[stdout] Completed wave 1. Wrote mutations to 0 files.
[stdout] Done.

[stdout] Applying post-fix cleanups...
[log] suppressTypeIssues found 4 mutations (4 insertions) in <rootDir>/actual.ts: [mutations]
[stdout] Done.
"
`;
